# fastapi-pg

./: README.md  alembic.ini  pyproject.toml  ruff.toml  sample.sql
alembic/: env.py
alembic/versions/: 5762f16f03c1_user_models_v1.py  ca188da5bc25_init_app_db.py  e497b89cfc56_apikey_model.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  routes.py
app/api/v1/endpoints/: __init__.py  apikey.py  auth.py  freshness.py  health.py  meta.py  price.py
app/configs/: __init__.py  core.py  db.py  seed.py
app/core/: __init__.py  cache.py  lifespan.py  middlewares.py  request.py  security.py  seeder.py  types.py
app/core/exceptions/: domain.py  handlers.py
app/db/: base.py  events.py  session.py  utils.py
app/errors/: base.py  domain.py  handlers.py  http.py
app/models/: apikey.py  base.py  price_data.py  user.py
app/models/app/: apikey.py  user.py
app/models/data/: crop.py  crop_category.py  data_source.py  date.py  economic_center.py  manifest.py  price_data.py  price_type.py  unit.py
app/repositories/: __init__.py  apikey.py  crop.py  crop_category.py  data_source.py  economic_center.py  manifest.py  price_data.py  price_type.py  user.py
app/schemas/: apikey.py  auth.py  base.py  core.py  enums.py  error.py  manifest.py  metadata.py  price_data.py  request.py  response.py  user.py
app/services/: apikey.py  auth.py  health.py  manifest.py  meta.py  price.py
app/utils/: __init__.py  helpers.py
