[project]
name = "fastapi-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cachetools>=7.0.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "psutil>=7.2.1",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.13",
    "ty>=0.0.12",
]


[tool.ty.environment]
python-version = "3.13"
